//  
// Copyright (c) BRNO UNIVERSITY OF TECHNOLOGY. All rights reserved.  
// Licensed under the MIT License. See LICENSE file in the solution root for full license information.  
//

syntax = "proto3";
package ndx.model;

/// <summary>
///	This is a list of link-layer header types used in pcap and pcap-ng capture files. See
/// See http://www.tcpdump.org/linktypes.html
/// </summary>
enum LinkTypeCode {
	Unknown = 0;
	Ethernet = 1;
	Ax25 = 3;
	IEEE802_5 = 5;
	ARCNET_BSD = 7;
	SLIP = 8;
	PPP = 9;
	FDDI = 10;
	PPP_HDLC = 50;
	PPP_ETHER = 51;
	ATM_RFC1483 = 100;
	RAW = 101;
	C_HDLC = 104;
	IEEE802_11 = 105;
	IPV4 = 228;
	IPV6 = 229;
	INFINIBAND = 247;
	SCTP = 248;
}

message Frame {
	int32 FrameNumber = 1;
	int32 FrameLength = 2;
	int64 FrameOffset = 3;
	int64 TimeStamp = 4;
}

message ByteRange {
	int32 Offset = 1;
	int32 Length = 2;
} 

message DatalinkPacketUnit {	
	ByteRange Bytes = 1;		
}

message NetworkPacketUnit {
	ByteRange Bytes = 1;
}

message TransportPacketUnit {
	ByteRange Bytes = 1;
}

message ApplicationPacketUnit {
	ByteRange Bytes = 1;
}

message PacketUnit {
	Frame Frame = 1;
	DatalinkPacketUnit Datalink = 2; 
	NetworkPacketUnit Network = 3;
	TransportPacketUnit Transport = 4;
	ApplicationPacketUnit Application = 5;
}

message PacketBlock {
	LinkTypeCode LinkType = 1;	
	repeated PacketUnit Packets = 2;
}

